added coctail recipe and removed two small cupcake images

--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
       <img src="img/featured-cupcake.jpg" alt="Avocado Chocolate Cupcake">
     </div>
 
-    <div id="new-cupcakes" class="grid_5 omega">
-      <h2>Fresh Out the Oven</h2>
-      <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeño So Spicy</a>. </p>
-      <img src="img/new-cupcake-bacon.jpg" alt="Bacon Me Crazy">
-      <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
+    <div id="recipe" class="grid_5 omega">
+      <h2>The Old-Fashioned</h2>
+      <p id="ingredients">Ingredients</p>
+      <ul>
+        <li>1 sugar cube</li>
+        <li>3 dashes Angostura bitters</li>
+        <li>2 ounces rye whisky</li>
+        <li>club soda</li>
+      </ul>
+      <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+
     </div>
 
 
