--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Smells Like Bakin' Cupcake Company</title>
+  <title>Julia Himmel wants you to have a drink</title>
   <link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
   <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
-  <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,700italic,700,600italic,600,400italic' rel='stylesheet' type='text/css'> 
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 </head>
 <body>
-  <div class="container clearfix">
-    <div class="grid_4">
-      <img src="img/logo.gif" alt="Smells Like Bakin">
-    </div>
-    <div class="grid_8 omega">
-      <ul class="nav">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Cupcakes &amp; Prices</a></li>
-        <li><a href="#">Locations</a></li>
-        <li class="last"><a href="#">Contact Us</a></li>
-      </ul>
-    </div>
-    <div id="intro" class="grid_9">
-      <h1>Opposites really do attract, especially in our kitchen! We combine unexpected flavors that melt together to create ironically delicious desserts.</h1>
-      <p><a href="#" class="btn">Browse Our Cupcakes</a></p>
+
+
+    <div id="intro" class="grid_12 omega">
+      <h1>Hello, my name is <span id="name">Julia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
     <div class="top_rule">
       
@@ -33,8 +22,8 @@
       <img src="img/old_fashioned_dbc.jpg" alt="Old Fashioned Cocktail">
     </div>
 
-    <div id="recipe" class="grid_8 alpha">
-      <h2>The Old-Fashioned</h2>
+    <div id="old_fashioned_recipe" class="grid_8 alpha">
+      <h2 id="recipe_title">The Old-Fashioned</h2>
       <p id="ingredients">Ingredients</p>
       <ul>
         <li>1 sugar cube</li>
