--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     <div id="intro" class="grid_12 omega">
       <h1>Hello, my name is <span id="name">Julia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
-    <div class="top_rule">
+    <div class="top_rule grid_12">
       
     </div>
 
-    <div id="cocktail_pic" class="grid_4 omega">
+    <div class="cocktail_pic grid_4">
       <img src="img/old_fashioned_dbc.jpg" alt="Old Fashioned Cocktail">
     </div>
 
-    <div id="old_fashioned_recipe" class="grid_8 alpha">
-      <h2 id="recipe_title">The Old-Fashioned</h2>
-      <p id="ingredients">Ingredients</p>
+    <div id="old_fashioned_recipe" class="grid_5">
+      <h2 class="recipe_title">The Old-Fashioned</h2>
+      <p class="ingredients">Ingredients</p>
+      <div class="body_of_recipe">
       <ul>
         <li>1 sugar cube</li>
         <li>3 dashes Angostura bitters</li>
@@ -32,6 +33,7 @@
         <li>club soda</li>
       </ul>
       <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+    </div>
 
     </div>
 
