changed font of numbers in order to achieve small caps

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <p class="ingredients">Ingredients</p>
       <div class="body_of_recipe">
       <ul>
-        <li>1 sugar cube</li>
-        <li>3 dashes Angostura bitters</li>
-        <li>2 ounces rye whisky</li>
+        <li><span class="number">1</span> sugar cube</li>
+        <li><span class="number">3</span> dashes Angostura bitters</li>
+        <li><span class="number">2</span> ounces rye whisky</li>
         <li>club soda</li>
       </ul>
       <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
