--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <h2 class="recipe_title">The Old-Fashioned</h2>
       <p class="ingredients">Ingredients</p>
       <div class="body_of_recipe">
-      <ul>
-        <li><span class="number">1</span> sugar cube</li>
-        <li><span class="number">3</span> dashes Angostura bitters</li>
-        <li><span class="number">2</span> ounces rye whisky</li>
-        <li>club soda</li>
+      <ul class="list_of_ingredients">
+        <li>&middot;  <span class="number">1</span> sugar cube</li>
+        <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
+        <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
+        <li>&middot;  club soda</li>
       </ul>
       <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
     </div>
