--- a/index.html
+++ b/index.html
@@ -15,28 +15,48 @@
     <div id="intro" class="grid_12 omega">
       <h1>Hello, my name is <span id="name">Julia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
-    <div class="top_rule grid_12">
-      
-    </div>
+
+    <div class="top_rule grid_12"></div>
 
     <div class="cocktail_pic grid_4">
       <img src="img/old_fashioned_dbc.jpg" alt="Old Fashioned Cocktail">
     </div>
 
-    <div id="old_fashioned_recipe" class="grid_5">
-      <h2 class="recipe_title">The Old-Fashioned</h2>
-      <p class="ingredients">Ingredients</p>
-      <div class="body_of_recipe">
-      <ul class="list_of_ingredients">
-        <li>&middot;  <span class="number">1</span> sugar cube</li>
-        <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
-        <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
-        <li>&middot;  club soda</li>
-      </ul>
-      <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+    <div class="full_recipe grid_5">
+        <h2 class="recipe_title">The Old-Fashioned</h2>
+        <p class="ingredients">Ingredients</p>
+        <div class="body_of_recipe">
+          <ul class="list_of_ingredients">
+            <li>&middot;  <span class="number">1</span> sugar cube</li>
+            <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
+            <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
+            <li>&middot;  club soda</li>
+          </ul>
+          <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+        </div>
     </div>
 
+    <div class="top_rule grid_12"></div>
+
+<!-- Negroni recipe begins here -->
+<div class="cocktail_pic grid_4">
+      <img src="img/negroni_dbc.jpg" alt="Old Fashioned Cocktail">
     </div>
-  </div>
+
+    <div class="full_recipe grid_5">
+        <h2 class="recipe_title">The Negroni</h2>
+        <p class="ingredients">Ingredients</p>
+        <div class="body_of_recipe">
+          <ul class="list_of_ingredients">
+            <li>&middot;  <span class="number">&frac34;</span> ounce Campari</li>
+            <li>&middot;  <span class="number">&frac34;</span> ounce Italian vermouth</li>
+            <li>&middot;  <span class="number">1 &frac12;</span> ounces London dry gin</li>
+          </ul>
+          <p id="instructions" >Shake the ingredients well with ice, then strain into a cocktail glass. Garnish with a twist of orange peel.</p>
+        </div>
+    </div>
+<!-- Negroni recipe ends here -->
+
+  
 </body>
 </html>
