added Manhattan recipe

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <h1>Hello, my name is <span id="name">Julia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
 
+<!-- Old-Fashioned recipe begins here -->
+
     <div class="top_rule grid_12"></div>
 
     <div class="cocktail_pic grid_4">
@@ -36,11 +38,14 @@
         </div>
     </div>
 
-    <div class="top_rule grid_12"></div>
+<!-- Old-Fashioned recipe ends here -->
 
 <!-- Negroni recipe begins here -->
+
+    <div class="top_rule grid_12"></div>
+
 <div class="cocktail_pic grid_4">
-      <img src="img/negroni_dbc.jpg" alt="Old Fashioned Cocktail">
+      <img src="img/negroni_dbc.jpg" alt="Negroni Cocktail">
     </div>
 
     <div class="full_recipe grid_5">
@@ -56,6 +61,29 @@
         </div>
     </div>
 <!-- Negroni recipe ends here -->
+
+<!-- Manhattan recipe begins here -->
+
+    <div class="top_rule grid_12"></div>
+
+    <div class="cocktail_pic grid_4">
+      <img src="img/manhattan_dbc.jpg" alt="Manhattan Cocktail">
+    </div>
+
+    <div class="full_recipe grid_5">
+        <h2 class="recipe_title">The Manhattan</h2>
+        <p class="ingredients">Ingredients</p>
+        <div class="body_of_recipe">
+          <ul class="list_of_ingredients">
+            <li>&middot;  <span class="number">1</span> ounce Italian vermouth</li>
+            <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
+            <li>&middot;  <span class="number">2</span> dashes Angostura bitters</li>
+          </ul>
+          <p id="instructions" >Shake the rye and vermouth with cracked ice and strain into a cocktail glass. Add the bitters. Garnish with a cocktail cherry if desired.</p>
+        </div>
+    </div>
+
+<!-- Manhattan recipe ends here -->
 
   
 </body>
