kerned J and u in name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <div id="intro" class="grid_12 omega">
-      <h1>Hello, my name is <span id="name">Julia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
+      <h1>Hello, my name is <span id="name"><span id="kern1">Ju</span>lia Himmel</span>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
 
 <!-- Old-Fashioned recipe begins here -->
