fixed typo and web address

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <div id="intro" class="grid_12 omega">
-      <h1>Hello, my name is <a href="www.juliahimmel.com"><span id="name"><span id="kern1">Ju</span>lia Himmel</span></a>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
+      <h1>Hello, my name is <a href="http://www.juliahimmel.com"><span id="name"><span id="kern1">Ju</span>lia Himmel</span></a>. I am a wine expert, designer, and aspiring programmer. I'd like you to make yourself a cocktail this week:</h1>
     </div>
 
 <!-- Old-Fashioned recipe begins here -->
@@ -34,7 +34,7 @@
             <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
             <li>&middot;  club soda</li>
           </ul>
-          <p id="instructions" >Place the sugar cube in a Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+          <p id="instructions" >Place the sugar cube in an Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
         </div>
     </div>
 
