Added X image. Created one recipe div. Added one recipe.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 <body>
 <div class="container">
 
+  <div class="recipe hidden">
+    <div class="cocktail_pic column">
+      <img src="img/Old Fashioned.jpg" alt="Old Fashioned Cocktail">
+    </div>
+    <div class="full_recipe column">
+        <h2 class="recipe_title">The Old-Fashioned</h2>
+        <p class="ingredients">Ingredients</p>
+        <div class="body_of_recipe">
+          <ul class="list_of_ingredients">
+            <li>&middot;  <span class="number">1</span> sugar cube</li>
+            <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
+            <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
+            <li>&middot;  club soda</li>
+          </ul>
+          <p id="instructions" >Place the sugar cube in an Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+        </div>
+    </div>
+  </div>
+
   <div class="quote">
     <h3 class="quote_body">&ldquo;After much pondering I think I understand a basic reason why a glass of something reviving is so welcome in the early evening. Partly, of course, it&rsquo;s just that, to revive, to relax; but it&rsquo;s also a convenient way of becoming a different person from your daytime self, less methodical, less calculating&#8212;however you put it, somebody different, and the prospect of that has helped to make the day tolerable.&rdquo;</h3>
     <h2 class="author">&#8212;Kingsley Amis</h2>
