--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="container">
 
   <div class="recipe hidden">
+    <img alt="x" src="img/x.png" class="ex">
     <div class="cocktail_pic column">
       <img src="img/Old Fashioned.jpg" alt="Old Fashioned Cocktail">
     </div>
