--- a/index.html
+++ b/index.html
@@ -44,66 +44,66 @@
   <div class="matrix">
 
     <div class="box changer">
-      <img src="img/Tom Collins.jpg">
+      <img src="img/Tom_Collins_thumb.jpg">
       <p class="title">Tom Collins<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Sloe Gin Fizz.jpg">
+      <img src="img/Sloe_Gin_Fizz_thumb.jpg">
       <p class="title">Sloe Gin Fizz<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Sidecar.jpg">
+      <img src="img/Sidecar_thumb.jpg">
       <p class="title">Sidecar<p>
     </div>
 
     <div class="box outer changer">
-      <img src="img/Sazerac.jpg">
+      <img src="img/Sazerac_thumb.jpg">
       <p class="title">Sazerac<p>
     </div>
 
     <div class="rule"></div>
 
     <div class="box changer">
-      <img src="img/Old Fashioned.jpg">
+      <img src="img/Old_Fashioned_thumb.jpg">
       <p class="title">Old Fashioned<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Negroni.jpg">
+      <img src="img/Negroni_thumb.jpg">
       <p class="title">Negroni<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Mojito.jpg">
+      <img src="img/Mojito_thumb.jpg">
       <p class="title">Mojito<p>
     </div>
 
     <div class="box outer changer">
-      <img src="img/Mint Julep.jpg">
+      <img src="img/Mint_Julep_thumb.jpg">
       <p class="title">Mint Julep<p>
     </div>
 
     <div class="rule"></div>
 
     <div class="box changer">
-      <img src="img/Martini.jpg">
+      <img src="img/Martini_thumb.jpg">
       <p class="title">Martini<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Manhattan.jpg">
+      <img src="img/Manhattan_thumb.jpg">
       <p class="title">Manhattan<p>
     </div>
 
     <div class="box changer">
-      <img src="img/Jack Rose.jpg">
+      <img src="img/Jack_Rose_thumb.jpg">
       <p class="title">Jack Rose<p>
     </div>
 
     <div class="box outer changer">
-      <img src="img/Daiquiri.jpg">
+      <img src="img/Daiquiri_thumb.jpg">
       <p class="title">Daiquiri<p>
     </div>
 
