able to access variable in controller

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="box changer">
       <img src="img/Tom_Collins_thumb.jpg">
-      <p class="title">{{ GridController.hello }}<p>
+      <p class="title">{{ items[0].name }}<p>
     </div>
 
     <div class="box changer">
