used css to make siblings fade on hover

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="matrix">
 
-    <div class="box changer" ng-repeat="item in items">
+    <div class="box changer fade" ng-repeat="item in items">
       <img src="{{ item.img }}">
       <p class="title">{{ item.name }}<p>
     </div>
