--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
   <div class="recipe" ng-show="recipe == true">
     <img alt="x" src="img/x.png" class="ex">
-<!--     <div class="cocktail_pic column">
+    <div class="cocktail_pic column">
       <img src="img/Old_Fashioned_web.jpg" alt="Old Fashioned Cocktail">
-    </div> -->
+    </div>
     <div class="full_recipe column">
-        <h2 class="recipe_title">{{ item.name }}</h2>
+        <h2 class="recipe_title">{{ name }}</h2>
         <p class="ingredients">Ingredients</p>
         <div class="body_of_recipe">
           <ul class="list_of_ingredients">
