--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
   <div class="recipe" ng-show="recipe == true">
     <img alt="x" src="img/x.png" class="ex">
     <div class="cocktail_pic column">
-      <img src="img/Old_Fashioned_web.jpg" alt="Old Fashioned Cocktail">
+      <img ng-src="{{img[1]}}" alt="Cocktail full-size">
     </div>
     <div class="full_recipe column">
         <h2 class="recipe_title">{{ name }}</h2>
         <p class="ingredients">Ingredients</p>
         <div class="body_of_recipe">
           <ul class="list_of_ingredients">
-            <li>&middot;  <span class="number">1</span> sugar cube</li>
+            <li ng-repeat="ingredient in ingredients">&middot; {{ingredient}}</li>
+<!--             <li>&middot;  <span class="number">1</span> sugar cube</li>
             <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
             <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
-            <li>&middot;  club soda</li>
+            <li>&middot;  club soda</li> -->
           </ul>
-          <p id="instructions" >Place the sugar cube in an Old-Fashioned glass. Add bitters and a little club soda. Muddle. Add one large ice cube, followed by the rye.</p>
+          <p id="instructions" >{{instructions}}</p>
         </div>
     </div>
   </div>
