Resized thumbnail image files and made grid boxes smaller. Styling still needs help.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
   <div class="recipe" ng-show="recipe == true">
-    <img alt="x" src="img/x.png" class="ex">
+    <img alt="x" src="img/x.png" class="ex" ng-click="recipe = false">
     <div class="cocktail_pic column">
       <img ng-src="{{img[1]}}" alt="Cocktail full-size">
     </div>
