removed on-click select from nav

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
   <div class="rule"></div>
 
-    <div class="nav ginchooser" ng-click="clickHere()" ng-class="{ 'ginselect': active == true }" >
+    <div class="nav ginchooser">
       <p>gin</p>
     </div>
 
-    <div class="nav whiskychooser" ng-click="clickHere()" ng-class="{ 'whiskyselect': active == true }">
+    <div class="nav whiskychooser">
       <p>whisky</p>
     </div>
 
-    <div class="nav rumchooser" ng-click="clickHere()" ng-class="{ 'rumselect': active == true }">
+    <div class="nav rumchooser">
       <p>rum</p>
     </div>
 
-    <div class="nav brandychooser" ng-click="clickHere()" ng-class="{ 'brandyselect': active == true }">
+    <div class="nav brandychooser">
       <p>brandy</p>
     </div>
 
