--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     </div>
   </div>
 
-  <div class="quote">
+<!--   <div class="quote">
     <h3 class="quote_body">&ldquo;After much pondering I think I understand a basic reason why a glass of something reviving is so welcome in the early evening. Partly, of course, it&rsquo;s just that, to revive, to relax; but it&rsquo;s also a convenient way of becoming a different person from your daytime self, less methodical, less calculating&#8212;however you put it, somebody different, and the prospect of that has helped to make the day tolerable.&rdquo;</h3>
     <h2 class="author">&#8212;Kingsley Amis</h2>
   </div>
 
-  <div class="rule"></div>
+  <div class="rule"></div> -->
+
+
+  <div class="matrix">
 
     <div class="nav ginchooser">
       <p>gin</p>
@@ -57,10 +60,7 @@
       <p>brandy</p>
     </div>
 
-  <div class="matrix">
-
-
-    <div class="rule"></div>
+    <div class="top"></div>
 
     <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:0:3" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
@@ -70,19 +70,19 @@
     <div class="rule fade"></div>
 
     <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:4:7" ng-class="{'outer': $last}">
-      <img src="{{ item.img }}">
+      <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
 
     <div class="rule fade"></div>
 
     <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:8:11" ng-class="{'outer': $last}">
-      <img src="{{ item.img }}">
+      <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
 
-    <div class="rule fade"></div>
-
+<!--     <div class="rule fade"></div>
+ -->
   </div>
 
 </div>
