--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
 
   <div class="matrix">
 
-    <div class="nav ginchooser">
+    <div class="nav ginchooser" ng-hide="recipe == true">
       <p>gin</p>
     </div>
 
-    <div class="nav whiskychooser">
+    <div class="nav whiskychooser" ng-hide="recipe == true">
       <p>whisky</p>
     </div>
 
-    <div class="nav rumchooser">
+    <div class="nav rumchooser" ng-hide="recipe == true">
       <p>rum</p>
     </div>
 
-    <div class="nav brandychooser">
+    <div class="nav brandychooser" ng-hide="recipe == true">
       <p>brandy</p>
     </div>
 
@@ -69,14 +69,14 @@
 
     <div class="rule fade"></div>
 
-    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:4:7" ng-class="{'outer': $last}">
+    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:4:7" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
 
     <div class="rule fade"></div>
 
-    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:8:11" ng-class="{'outer': $last}">
+    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:8:11" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
