took off heading for the moment; forgot to also take it oiut of css

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
   <div class="matrix">
 
+<!--     <div class="heading">
+      <h3>choose your poison</h3>
+    </div> -->
+
     <div class="nav ginchooser" ng-hide="recipe == true">
       <p>gin</p>
     </div>
