--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/application.js"></script>
 </head>
 <body ng-controller="GridController">
@@ -24,23 +25,28 @@
         <div class="body_of_recipe">
           <ul class="list_of_ingredients">
             <li ng-repeat="ingredient in ingredients">&middot; {{ingredient}}</li>
-<!--             <li>&middot;  <span class="number">1</span> sugar cube</li>
-            <li>&middot;  <span class="number">3</span> dashes Angostura bitters</li>
-            <li>&middot;  <span class="number">2</span> ounces rye whisky</li>
-            <li>&middot;  club soda</li> -->
           </ul>
           <p id="instructions" >{{instructions}}</p>
         </div>
     </div>
   </div>
 
-<!--   <div class="quote">
-    <h3 class="quote_body">&ldquo;After much pondering I think I understand a basic reason why a glass of something reviving is so welcome in the early evening. Partly, of course, it&rsquo;s just that, to revive, to relax; but it&rsquo;s also a convenient way of becoming a different person from your daytime self, less methodical, less calculating&#8212;however you put it, somebody different, and the prospect of that has helped to make the day tolerable.&rdquo;</h3>
-    <h2 class="author">&#8212;Kingsley Amis</h2>
-  </div>
 
-  <div class="rule"></div> -->
+    <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('gin')" ng-mouseleave="unfade()">
+      <p>gin</p>
+    </div>
 
+    <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('whisky')" ng-mouseleave="unfade()">
+      <p>whisky</p>
+    </div>
+
+    <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('rum')" ng-mouseleave="unfade()">
+      <p>rum</p>
+    </div>
+
+    <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('brandy')" ng-mouseleave="unfade()">
+      <p>brandy</p>
+    </div>
 
   <div class="matrix">
 
@@ -48,39 +54,24 @@
       <h3>choose your poison</h3>
     </div> -->
 
-    <div class="nav ginchooser" ng-hide="recipe == true">
-      <p>gin</p>
-    </div>
-
-    <div class="nav whiskychooser" ng-hide="recipe == true">
-      <p>whisky</p>
-    </div>
-
-    <div class="nav rumchooser" ng-hide="recipe == true">
-      <p>rum</p>
-    </div>
-
-    <div class="nav brandychooser" ng-hide="recipe == true">
-      <p>brandy</p>
-    </div>
 
     <div class="top"></div>
 
-    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:0:3" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
+    <div class="box changer {{item.liquor}}" ng-repeat="item in items | range:0:3" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
 
-    <div class="rule fade"></div>
+    <div class="rule"></div>
 
-    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:4:7" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
+    <div class="box changer {{item.liquor}}" ng-repeat="item in items | range:4:7" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
 
-    <div class="rule fade"></div>
+    <div class="rule"></div>
 
-    <div class="box changer fade {{item.liquor}}" ng-repeat="item in items | range:8:11" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
+    <div class="box changer {{item.liquor}}" ng-repeat="item in items | range:8:11" ng-class="{'outer': $last}" ng-click="recipeShow(item)">
       <img ng-src="{{item.img[0]}}">
       <p class="title">{{ item.name }}<p>
     </div>
