--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,700italic,700,600italic,600,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="js/application.js"></script>
 </head>
 <body ng-controller="GridController">
@@ -24,7 +24,7 @@
         <p class="ingredients">Ingredients</p>
         <div class="body_of_recipe">
           <ul class="list_of_ingredients">
-            <li ng-repeat="ingredient in ingredients">&middot; {{ingredient}}</li>
+            <li ng-repeat="ingredient in ingredients" ng-bind-html="TrustHtmlSnippet(ingredient)">&middot; {{ingredient}}</li>
           </ul>
           <p id="instructions" >{{instructions}}</p>
         </div>
