--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <p class="ingredients">Ingredients</p>
         <div class="body_of_recipe">
           <ul class="list_of_ingredients">
-            <li ng-repeat="ingredient in ingredients" ng-bind-html="TrustHtmlSnippet(ingredient)">&middot; {{ingredient}}</li>
+            <li ng-repeat="ingredient in ingredients" ng-bind-html="TrustHtmlSnippet(ingredient)">{{ingredient}}</li>
           </ul>
-          <p id="instructions" >{{instructions}}</p>
+          <p id="instructions" ng-bind-html="TrustHtmlSnippet(instructions)">{{instructions}}</p>
         </div>
     </div>
   </div>
