added subtle hover effect to nav

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
     </div>
 
     <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('gin')" ng-mouseleave="unfade()">
-      <p>gin</p>
+      <p class="changer">gin</p>
     </div>
 
     <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('whisky')" ng-mouseleave="unfade()">
-      <p>whisky</p>
+      <p class="changer">whisky</p>
     </div>
 
     <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('rum')" ng-mouseleave="unfade()">
-      <p>rum</p>
+      <p class="changer">rum</p>
     </div>
 
     <div class="nav" ng-hide="recipe == true" ng-mouseenter="gridFade('brandy')" ng-mouseleave="unfade()">
-      <p>brandy</p>
+      <p class="changer">brandy</p>
     </div>
 
   <div class="matrix">
